--- a/templates/tls_listen.xml
+++ b/templates/tls_listen.xml
@@ -1,27 +1,37 @@
 <netconf-server xmlns="urn:ietf:params:xml:ns:yang:ietf-netconf-server">
-  <listen>
-    <endpoint>
-      <name>tls_listen_endpt</name>
-      <tls>
-        <address>0.0.0.0</address>
-        <port>6513</port>
-        <certificates>
-          <certificate>
-            <name>server_cert</name>
-          </certificate>
-        </certificates>
-        <client-auth>
-          <trusted-ca-certs>trusted_ca_list</trusted-ca-certs>
-          <cert-maps>
-            <cert-to-name>
-              <id>1</id>
-              <fingerprint></fingerprint>
-              <map-type xmlns:x509c2n="urn:ietf:params:xml:ns:yang:ietf-x509-cert-to-name">x509c2n:specified</map-type>
-              <name>netconf</name>
-            </cert-to-name>
-          </cert-maps>
-        </client-auth>
-      </tls>
-    </endpoint>
-  </listen>
+    <listen>
+        <endpoint>
+            <name>default-tls</name>
+            <tls>
+                <tcp-server-parameters>
+                    <local-address>0.0.0.0</local-address>
+                    <keepalives>
+                        <idle-time>1</idle-time>
+                        <max-probes>10</max-probes>
+                        <probe-interval>5</probe-interval>
+                    </keepalives>
+                </tcp-server-parameters>
+                <tls-server-parameters>
+                    <server-identity>
+                        <keystore-reference>
+                            <asymmetric-key>genkey</asymmetric-key>
+                            <certificate>servercert</certificate>
+                        </keystore-reference>
+                    </server-identity>
+                    <client-authentication>
+                        <required/>
+                        <ca-certs>cacerts</ca-certs>
+                        <cert-maps>
+                            <cert-to-name>
+                                <id>1</id>
+                                <fingerprint></fingerprint>
+                                <map-type xmlns:x509c2n="urn:ietf:params:xml:ns:yang:ietf-x509-cert-to-name">x509c2n:specified</map-type>
+                                <name>netconf</name>
+                            </cert-to-name>
+                        </cert-maps>
+                    </client-authentication>
+                </tls-server-parameters>
+            </tls>
+        </endpoint>
+    </listen>
 </netconf-server>
